GNOME Bugzilla – Bug 105865
unkown problem
Last modified: 2018-04-04 01:01:09 UTC
Package: balsa Severity: normal Version: bug buddy Synopsis: unkown problem Bugzilla-Product: balsa Bugzilla-Component: general Description: unkown , I didn't write down the problem so I don't know anything. ------- Bug moved to this database by unknown@bugzilla.gnome.org 2003-02-12 04:27 ------- The original reporter (bmulford@earthlink.net) of this bug does not have an account here. Reassigning to the exporter, unknown@bugzilla.gnome.org. Reassigning to the default owner of the component, pawsa@theochem.kth.se.
Please reopen when you collect more data. Thanks!
Created attachment 370498 [details] [review] jsauthority: pass "%s" format string to remaining report function commit 00adeee1b62 attempted to add a "%s" format string to the two JS_Report invocations that needed it, but somehow only got one them. This commit gets the other one.
Comment on attachment 370498 [details] [review] jsauthority: pass "%s" format string to remaining report function Attachment 370498 [details] pushed as 373705b - jsauthority: pass "%s" format string to remaining report function
(sorry wrong bug tracker)
No problem--been there, done that :-)