jsauthority: pass "%s" format string to remaining report function

commit 00adeee1b62 attempted to add a "%s" format string to the
two JS_Report invocations that needed it, but somehow only got
one them.

This commit gets the other one.

https://bugzilla.gnome.org/show_bug.cgi?id=105865